Force CUBE_MAP_POSITIVE_X texture allocation before CopyTexImage2D on Intel Mac

CopyTexImage2D has bug for cube map texture target on Intel Mac, if the
CUBE_MAP_POSITIVE_X texture is not allocated yet.

This CL works around this bug by doing TexImage2D to allocate the CUBE_MAP_POSITIVE_X
texture before CopyTexImage2D if target is one face of a cube map texture.

BUG=648197
TEST=deqp/functional/gles3/texturespecification/basic_copyteximage2d.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2348243002
Cr-Commit-Position: refs/heads/master@{#420575}

Former-commit-id: 45903b6bfa81d0257af4da576e8edee825093b6b